[package]
name = "amqp_transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqp_core = { path = "../amqp_core" }
amqp_messaging = { path = "../amqp_messaging" }
anyhow = "1.0.53"
bytes = "1.1.0"
nom = "7.1.0"
once_cell = "1.9.0"
rand = "0.8.4"
regex = "1.5.4"
smallvec = { version = "1.8.0", features = ["union"] }
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["full", "tracing"] }
tracing = "0.1.30"
uuid = "0.8.2"

[features]

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "parser"
harness = false
