[package]
name = "haesli_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
haesli_datastructure = { path = "../haesli_datastructure" }
bytes = "1.4.0"
parking_lot = "0.12.1"
rand = "0.8.5"
smallvec = { version = "1.10.0", features = ["union"] }
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["sync"] }
uuid = "0.8.2"

[features]
