[package]
name = "haesli_dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
haesli_core = { path = "../haesli_core" }
anyhow = "1.0.69"
axum = "0.4.8"
mime_guess = "2.0.4"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.2.5", features = ["cors"] }
tracing = "0.1.37"
zip = "0.5.13"

[build-dependencies]
anyhow = "1.0.69"
walkdir = "2.3.2"
zip = "0.5.13"
