[package]
name = "haesli_messaging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
haesli_core = { path = "../haesli_core" }
haesli_datastructure = { path = "../haesli_datastructure" }
parking_lot = "0.12.1"
tracing = "0.1.37"
tokio = { version = "1.26.0", features = ["full"] }

[features]
