[package]
name = "haesli_transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
haesli_core = { path = "../haesli_core" }
anyhow = "1.0.69"
bytes = "1.4.0"
nom = "7.1.3"
once_cell = "1.17.1"
rand = "0.8.5"
regex = "1.7.1"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"

[features]

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "parser"
harness = false
