[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.54"
clap = { version = "3.1.1", features = ["derive"] }
heck = "0.4.0"
itertools = "0.10.3"
strong-xml = "0.6.3"
