[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "3.2.23", features = ["derive"] }
heck = "0.4.1"
itertools = "0.10.5"
strong-xml = "0.6.3"
